2001-03-03 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.in: Fixed a few bugs dealing with the enabling and
          disabling of features via the command line (pointed out by 
	  Karel Kulhavy)
	
	* src/s_cue.c: Added file which contains the postscript and 
	  the image output routines for the cues

	* src/f_print.c: Added call to output the cues

	* src/f_image.c: Added call to output the cues

	* include/defines.h: Added #defines for cue output routines

	* src/o_arc_basic.c: Fixed the image output of arcs

2001-03-02  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_arc_basic.c: Fixed a bug pointed out by Bruno Schwander
	  (Arcs were to thin compared to thin lines/boxes)

	* src/o_circle_basic.c: Removed some line whitespace at the top
	  of the file

2001-03-01  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/*.c: Converted some // comments to /* */

	* src/*.c: Cleaned up some -Wall warning messages
	
2001-02-25  Ales Hvezda  <ahvezda@geda.seul.org>

        * src/o_attrib.c: Added some if (... == NULL) checks to prevent
          some core dumps

2001-02-23 Ales Hvezda  <ahvezda@geda.seul.org>

	* src/s_hierarchy.c: Added code to either do a normal hierarchy
	  load or force the load (for gnetlist and hierarchical traversal)

	* src/s_page.c: Added code to forcibly load a schematic page
	  (s_page_new_lowlevel).  Modified s_page_new to use this new
	  routine.
	
2001-02-17 Ales Hvezda  <ahvezda@geda.seul.org>

	* include/struct.c: Removed more of the old connection code
	  (which was #ifdef'ed out)

	* src/s_page.c: Commented in stretch_head, stretch_tail init code

	* src/s_page.c: Removed all trace of the old connection code
	  (which was #ifdef'ed out)

	* src/s_stretch.c: Put this file back into the build

	* src/f_*.c: Removed all traces of the old connection code
	
2001-02-16 Ales Hvezda  <ahvezda@geda.seul.org>

	* src/o_net_basic.c: Oops, nets which caused midpoints were being
	  consolidated away (bad), fixed this by checking first to make